# university

./: .gitignore  CMakeLists.txt  README.md
algorithmization-and-programming/: CMakeLists.txt
algorithmization-and-programming/semester-1/: CMakeLists.txt
algorithmization-and-programming/semester-1/cmd/: CMakeLists.txt  lab1.cpp  lab2_1.cpp  lab2_2.cpp  lab3_1.cpp  lab3_2.cpp  lab4.cpp  lab5.cpp  lab_1.cpp  lab_2_1.cpp  lab_2_2.cpp  playground.cpp
algorithmization-and-programming/semester-1/include/: array_utils.h  geom.h  io_utils.h  lab1.h  lab2.h  lab3.h  lab4.h  math.h  matrix.h  number_utils.h  sort.h  time.h
algorithmization-and-programming/semester-1/lab1/: CMakeLists.txt  lab1.h
algorithmization-and-programming/semester-1/lab2/: CMakeLists.txt  lab2.cpp
algorithmization-and-programming/semester-1/lib/: CMakeLists.txt  array_utils.cpp  factorial.cpp  geom.cpp  io_utils.cpp  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  math.cpp  matrix.cpp  number_utils.cpp  sort.cpp  time.cpp
algorithmization-and-programming/semester-1/math/: CMakeLists.txt  factorial.cpp  factorial.h
algorithmization-and-programming/semester-1/src/cmd/lab1/: main.cpp
algorithmization-and-programming/semester-1/src/cmd/lab2.1/: main.cpp
algorithmization-and-programming/semester-1/src/cmd/lab2.2/: main.cpp
algorithmization-and-programming/semester-1/src/lab1/: lab1.cpp
algorithmization-and-programming/semester-1/src/lab2/: lab2.h
algorithmization-and-programming/semester-1/src/math/: factorial.cpp  factorial.h
oop/: CMakeLists.txt
oop/semester-2/cmd/: CMakeLists.txt  lab1.cpp  lab2.cpp  lab3.cpp
oop/semester-2/include/: abstract_deposit.h  base_deposit.h  daily_capitalize_deposit.h  decimal.h  deposits_list.h  monthly_capitalize_deposit.h  point.h  quarterly_capitalize_deposit.h  queue.h  slice.h  sparse_matrix.h  time_utils.h
oop/semester-2/lib/: CMakeLists.txt  base_deposit.cpp  daily_capitalize_deposit.cpp  decimal.cpp  deposits_list.cpp  monthly_capitalize_deposit.cpp  point.cpp  quarterly_capitalize_deposit.cpp  queue.cpp  slice.cpp  sparse_matrix.cpp
