add_library(
        math
        STATIC
        math.cpp
        factorial.cpp
        geom.cpp
        matrix.cpp
)

add_library(
        utils
        STATIC
        io_utils.cpp
        array_utils.cpp
)

add_library(
        lab
        STATIC
        lab1.cpp
        lab2.cpp
        lab3.cpp
)
