add_library(
        time
        STATIC
        time.cpp
)

add_library(
        math
        STATIC
        math.cpp
        factorial.cpp
        geom.cpp
        matrix.cpp
)

add_library(
        utils
        STATIC
        io_utils.cpp
        array_utils.cpp
        number_utils.cpp
        sort.cpp
)

add_library(
        lab
        STATIC
        lab1.cpp
        lab2.cpp
        lab3.cpp
        lab4.cpp
)
